Add comment with VM configuration flags