@@ -1,5 +1,14 @@
 package com.bogdanovstudio;
 
+/*
+-Xms256m
+-Xmx256m
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=./logs/heapdump.hprof
+-XX:+UseG1GC
+-Xlog:gc=debug:file=./logs/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m
+*/
+
 import java.time.LocalDateTime;
 
 public class CalcDemo {
